fix: 临时移除最后提交时间
