# app/core_data/internal/server/http.go
@@ -19,10 +19,11 @@ import (
 
 func NewWhiteListMatcher() selector.MatchFunc {
 	whiteList := map[string]string{
-		"/api.core.v1.submit_log.Submit/GetSubmitLog":      "",
-		"/api.core.v1.spider.Spider/GetSpider":             "",
-		"/api.core.v1.statistic.Statistic/Heatmap":         "",
-		"/api.core.v1.statistic.Statistic/PeriodCount":      "",
+		"/api.core.v1.submit_log.Submit/GetSubmitLog":  "",
+		"/api.core.v1.spider.Spider/GetSpider":         "",
+		"/api.core.v1.statistic.Statistic/Heatmap":     "",
+		"/api.core.v1.statistic.Statistic/PeriodCount": "",
+		"/api.core.v1.statistic.Statistic/Rank":        "",
 	}
 	return func(ctx context.Context, operation string) bool {
 		// log.Info(operation)
